syntax = "proto3";

package pb;

service DVDRental {
    rpc CreateDVD (CreateDVDRequest) returns (CreateDVDResponse);
    rpc RentDVD (RentDVDRequest) returns (RentDVDResponse);
    // rpc ReturnsDVD (ReturnsDVDRequest) returns (ReturnsDVDResponse);
}

message CreateDVDRequest {
    string name = 1;
}

message CreateDVDResponse {
    string err = 1;
}

message RentDVDRequest {
    string id = 1;
}

message RentDVDResponse {
    string err = 1;
}